<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0FBFC"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_the_day"
        android:textAllCaps="false"
        android:textColor="#293241"
        android:textColorHint="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/DDMMYYYY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_number" />

    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/question_number"
        android:textColor="#3D5A80"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/guess_date"
        app:layout_constraintEnd_toStartOf="@id/q_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/DDMMYYYY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dd_mm_yyyy"
        android:textColor="#3D5A80"
        android:textColorHighlight="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/guess_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <TextView
        android:id="@+id/q_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/q_number"
        android:textColor="#6C7A83"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/question_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guess_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_date"
        android:textColor="#E65100"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/answer_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DDMMYYYY" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:backgroundTint="#1C6EED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_options" />

    <RadioGroup
        android:id="@+id/answer_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess_date">

        <RadioButton
            android:id="@+id/OptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OptionA"
            android:textColor="#EE6C4D"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/OptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OptionB"
            android:textColor="#EE6C4D"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/OptionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OptionC"
            android:textColor="#EE6C4D"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/OptionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OptionD"
            android:textColor="#EE6C4D"
            android:textSize="14sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>